# PhenIEI

./: README.md  pheniei_app.py  pyproject.toml  requirements.txt
.github/workflows/: main_pheniei.yml
data/: iei_hpo_2022.tsv  specific_symptoms.tsv
