[tool.poetry]
name = "PhenIEI"
version = "0.1.0"
description = "Exploring knowledge on Inborn Errors of Immunity"
authors = ["Kevin Yauy <kevin.yauy@chu-montpellier.fr>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9.7 || >3.9.7,<4.0.0"
streamlit = "^1.21.0"
plotnine = "^0.10.1"
ujson = "^5.6.0"
pandas = "^1.5.2"
streamlit-toggle-switch = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
